<resources>
    <string name="app_name">LoginApplication</string>
    <string name="welcome">Welcome Back!</string>
    <string name="desc">Thankyou for joining us!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="no_account">Don\'t have an Account?</string>
    <string name="register">Register</string>
    <string name="account_msg">Create your Account!</string>
    <string name="already_member">Already a member?</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="passwd">Password</string>
    <string name="mobile">Mobile</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="mention_here">Mention here</string>
    <string name="btn">SIGN IN</string>
</resources>