<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:gravity="center"
    tools:context=".RegistrationActivity">

    <TextView
        android:id="@+id/account_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/account_msg"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/already_member"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_member"
            android:textColor="#808080"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/sign_up"
            android:textColor="#1A78CC"
            android:textStyle="bold" />
    </LinearLayout>

    <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/black"
            android:textSize="20sp"/>

    <EditText
            android:id="@+id/passwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/passwd"
            android:inputType="textPassword"
            android:textColorHint="@color/black"
            android:textSize="20sp"/>

    <EditText
            android:id="@+id/mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/mobile"
            android:inputType="number"
            android:maxLength="10"
            android:textColorHint="@color/black"
            android:textSize="20sp"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/gender"
            android:textColor="@color/black"
            android:textSize="20sp"/>

    <RadioGroup
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <RadioButton
                android:id="@+id/male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:textSize="20sp"/>

        <RadioButton
            android:id="@+id/female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/female"
            android:textSize="20sp"/>

        <RadioButton
            android:id="@+id/other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/other"
            android:textSize="20sp"/>

    </RadioGroup>

    <EditText
        android:id="@+id/mention_here"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/mention_here"
        android:textSize="20dp"
        android:maxLines="2"
        android:visibility="gone"/>

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/btn"
        android:textSize="20dp"/>


</LinearLayout>