<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@color/white"
    android:paddingStart="30dp"
    android:paddingEnd="30dp"
    tools:context=".MainActivity"
    tools:ignore="ExtraText">

    <ImageView
        android:id="@+id/loginImg"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/login" />


    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/desc"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/username"
        android:inputType="text"
        android:paddingHorizontal="20dp"
        android:textColorHint="#808080"
        android:textSize="20sp"
         />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingHorizontal="20dp"
        android:textSize="20sp"
        android:textColorHint="#808080" />

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="#1A78CC"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="20sp"
         />
    <LinearLayout
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        >
        <TextView
            android:id="@+id/noAccountMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/noAccount"
            android:textSize="15sp"
            android:textColor="#808080"
            />
        <TextView
            android:id="@+id/registerMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:text="@string/register"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="#808080"
            />

    </LinearLayout>



</LinearLayout>